--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Color Game</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Color Game</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-	<h1>The Great <span id="colorDisplay">RGB</span>Color Game</h1>
+    <h1>
+		The Great 
+		<br>
+		<span id="colorDisplay">RGB</span>
+		<br>
+	Color Game</h1>
+    <div id="strip">
+        <button id="reset">New Colors</button>
+        <span id="message"></span>
+        <button class="mode">Easy</button>
+        <button class="mode selected">Hard</button>
+    </div>
 
-	<div>
-		<span id="message"></span>
+    <div id="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
 
-	</div>
-
-
-
-	<div id ="container">	
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-	</div>
-
-
-<script type="text/javascript" src ="js/scripts.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 </body>
+
 </html>
